# QT_CAD_Program

./: .gitignore  CMakeLists.txt  Doxyfile  QTViewer.desktop  README.md  annotated.html  cell_8cpp.html  cell_8h.html  cell_8h_source.html  classCell-members.html  classCell.html  classHexahedron-members.html  classHexahedron.html  classMainWindow-members.html  classMainWindow.html  classPyramid-members.html  classPyramid.html  classSceneWidget-members.html  classSceneWidget.html  classTetrahedron-members.html  classTetrahedron.html  classcolor-members.html  classcolor.html  classes.html  classmaterial-members.html  classmaterial.html  classmodel-members.html  classmodel.html  classvector3d-members.html  classvector3d.html  classvertece3d-members.html  classvertece3d.html  dir_bf2df8eecf7d1870b48f79725acbaa5b.html  dir_cdc7320f1798585e36c63ded4217e93d.html  dir_dabc0cfab7daf7df8bb89091d5193761.html  dir_de4c28319bfd36fe681036d6867f2e2f.html  files.html  functions.html  functions_func.html  functions_vars.html  (+41 more)
.github/workflows/: cmake.yml  doxygen.yml
ModelLibrary/: CMakeLists.txt  README.md  build.sh  test.sh  test_model_output.sh
ModelLibrary/examples/: ExampleModel4.mod  ExampleModel5.mod
ModelLibrary/src/: CMakeLists.txt  cell.cpp  cell.h  material.cpp  material.h  matrix.h  model.cpp  model.h  vector3D.cpp  vector3D.h
ModelLibrary/tests/: CMakeLists.txt  ostreamfix_tests.cpp  ostreamfix_tests.h  test.cpp  test.h  test_cell.cpp  test_cell.h  test_material.cpp  test_material.h  test_model.cpp  test_model.h  test_vector3D.cpp  test_vector3D.h
package_conf/: ubuntu-impish.cmake
qtvtk/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scenewidget.cpp  scenewidget.h
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  (+11 more)
